# python_module_08

./: .env.example
ex0/: construct.py
ex1/: loading.py  pyproject.toml  requirements.txt
ex2/: oracle.py
