[tool.poetry]
name = "matrix-loading"
version = "0.1.0"
description = "Advanced Matrix Data Analysis Tool"
authors = ["mbouyer"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
pandas = "^3.0.2"
numpy = "^2.4.4"
matplotlib = "^3.10.8"
requests = "^2.33.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
